--- a/wg-web/src/main/webapp/common/main.html
+++ b/wg-web/src/main/webapp/common/main.html
@@ -13,84 +13,103 @@
     <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 <body class="layui-layout-body" layadmin-themealias="default">
-    <div class="layui-layout layui-layout-admin">
-        <div class="layui-header">
-            <ul class="layui-nav layui-layout-left">
-                <li class="layui-nav-item layadmin-flexible" lay-unselect="">
-                    <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
-                        <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
-                    </a>
-                </li>
-                <li class="layui-nav-item" lay-unselect="">
-                    <a href="javascript:;" layadmin-event="refresh" title="刷新">
-                        <i class="layui-icon layui-icon-refresh-3"></i>
-                    </a>
-                </li>
-                <!--<span class="layui-nav-bar" style="left: 38px; top: 48px; width: 0px; opacity: 0;"></span>-->
-            </ul>
-            <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
+    <div id="LAY_app" class="">
+        <div class="layui-layout layui-layout-admin">
+            <div class="layui-header">
+                <ul class="layui-nav layui-layout-left">
+                    <li class="layui-nav-item layadmin-flexible" lay-unselect="">
+                        <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
+                            <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
+                        </a>
+                    </li>
+                    <li class="layui-nav-item" lay-unselect="">
+                        <a href="javascript:;" layadmin-event="refresh" title="刷新">
+                            <i class="layui-icon layui-icon-refresh-3"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
 
-                <li class="layui-nav-item layui-hide-xs" lay-unselect="">
-                    <a href="javascript:;" layadmin-event="fullscreen">
-                        <i class="layui-icon layui-icon-screen-full"></i>
-                    </a>
-                </li>
-                <li class="layui-nav-item" lay-unselect="">
-                    <a href="javascript:;">
-                        <cite>贤心</cite>
-                        <span class="layui-nav-more"></span>
-                    </a>
-                    <dl class="layui-nav-child layui-anim layui-anim-upbit">
-                        <dd><a lay-href="set/user/info">基本资料</a></dd>
-                        <dd><a lay-href="set/user/password">修改密码</a></dd>
-                        <hr>
-                        <dd layadmin-event="logout" style="text-align: center;">
-                            <a>退出</a>
-                        </dd>
-                    </dl>
-                </li>
-
-                <li class="layui-nav-item layui-hide-xs" lay-unselect="">
-                    <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
-                </li>
-                <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect="">
-                    <a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
-                </li>
-                <!--<span class="layui-nav-bar" style="left: 232.5px; top: 48px; width: 0px; opacity: 0;"></span>-->
-            </ul>
-        </div>
-
-        <div class="layui-side layui-side-menu">
-            <div class="layui-side-scroll">
-                <div class="layui-logo">WG系统后台</div>
-                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-                    <li class="layui-nav-item layui-nav-itemed">
-                        <a class="" href="javascript:;">所有商品</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">列表一</a></dd>
-                            <dd><a href="javascript:;">列表二</a></dd>
-                            <dd><a href="javascript:;">列表三</a></dd>
-                            <dd><a href="">超链接</a></dd>
+                    <li class="layui-nav-item layui-hide-xs" lay-unselect="">
+                        <a href="javascript:;" layadmin-event="fullscreen">
+                            <i class="layui-icon layui-icon-screen-full"></i>
+                        </a>
+                    </li>
+                    <li class="layui-nav-item" lay-unselect="">
+                        <a href="javascript:;">
+                            <cite>贤心</cite>
+                            <span class="layui-nav-more"></span>
+                        </a>
+                        <dl class="layui-nav-child layui-anim layui-anim-upbit">
+                            <dd><a lay-href="set/user/info">基本资料</a></dd>
+                            <dd><a lay-href="set/user/password">修改密码</a></dd>
+                            <hr>
+                            <dd layadmin-event="logout" style="text-align: center;">
+                                <a>退出</a>
+                            </dd>
                         </dl>
                     </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">解决方案</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">列表一</a></dd>
-                            <dd><a href="javascript:;">列表二</a></dd>
-                            <dd><a href="">超链接</a></dd>
-                        </dl>
+
+                    <li class="layui-nav-item layui-hide-xs" lay-unselect="">
+                        <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
                     </li>
-                    <li class="layui-nav-item"><a href="">云市场</a></li>
-                    <li class="layui-nav-item"><a href="">发布商品</a></li>
+                    <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect="">
+                        <a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
+                    </li>
                 </ul>
             </div>
-        </div>
 
-        <div class="layui-body">
-            <!-- 内容主体区域 -->
-            <div style="padding: 15px;">内容主体区域</div>
+            <div class="layui-side layui-side-menu">
+                <div class="layui-side-scroll">
+                    <div class="layui-logo">WG系统后台</div>
+                    <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                    <ul class="layui-nav layui-nav-tree"  lay-filter="menu">
+                        <li class="layui-nav-item layui-nav-itemed" layadmin-event="open">
+                            <a class="" href="javascript:;">
+                                <i class="layui-icon layui-icon-home"></i>
+                                <cite>所有商品</cite>
+                            </a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="javascript:;" data_url="../view/test2.html">列表一</a></dd>
+                                <dd><a href="javascript:;" data_url="../view/test.html">列表二</a></dd>
+                                <dd><a href="javascript:;">列表三</a></dd>
+                                <dd><a href="">超链接</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item" layadmin-event="open">
+                            <a href="javascript:;">
+                                <i class="layui-icon layui-icon-component"></i>
+                                <cite>解决方案</cite>
+                            </a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="javascript:;">列表一</a></dd>
+                                <dd><a href="javascript:;">列表二</a></dd>
+                                <dd><a href="">超链接</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item" layadmin-event="open">
+                            <a href="">
+                                <i class="layui-icon layui-icon-template"></i>
+                                <cite>云市场</cite>
+                            </a>
+                        </li>
+                        <li class="layui-nav-item" layadmin-event="open">
+                            <a href="">
+                                <i class="layui-icon layui-icon-app"></i>
+                                <cite>发布商品</cite>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="layui-body" id="LAY_app_body">
+                <div class="layadmin-tabsbody-item layui-show">
+                    <iframe src="../view/test.html" frameborder="0" class="layadmin-iframe"></iframe>
+                </div>
+            </div>
+            <!-- 辅助元素，一般用于移动设备下遮罩 -->
+            <div class="layadmin-body-shade" layadmin-event="shade"></div>
         </div>
     </div>
     <style id="LAY_layadmin_theme">
