优化刷新和全屏功能

--- a/wg-web/src/main/webapp/common/main.html
+++ b/wg-web/src/main/webapp/common/main.html
@@ -31,8 +31,8 @@
                 <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
 
                     <li class="layui-nav-item layui-hide-xs" lay-unselect="">
-                        <a href="javascript:;" layadmin-event="fullscreen">
-                            <i class="layui-icon layui-icon-screen-full"></i>
+                        <a href="javascript:;" layadmin-event="fullscreen" title="全屏">
+                            <i id="fullscreen" class="layui-icon layui-icon-screen-full"></i>
                         </a>
                     </li>
                     <li class="layui-nav-item" lay-unselect="">
