完成页面数据库配置模块

--- a/wg-web/src/main/webapp/common/main.html
+++ b/wg-web/src/main/webapp/common/main.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>WG系统页面</title>
+    <title>WG技术平台系统页面</title>
     <link type="text/css" rel="stylesheet" href="lib/layui/css/layui.css" media="all">
     <link type="text/css" rel="stylesheet" href="lib/layui/css/modules/layer/default/layer.css?v=3.1.1">
     <link id="layuicss-layuiAdmin" rel="stylesheet" href="lib/layui/admin/admin.css?v=1.2.1 pro-1" media="all">
@@ -61,44 +61,44 @@
 
             <div class="layui-side layui-side-menu">
                 <div class="layui-side-scroll">
-                    <div class="layui-logo">WG系统后台</div>
+                    <div class="layui-logo">WG技术平台</div>
                     <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                    <ul class="layui-nav layui-nav-tree"  lay-filter="menu">
-                        <li class="layui-nav-item layui-nav-itemed" layadmin-event="open">
-                            <a class="" href="javascript:;">
-                                <i class="layui-icon layui-icon-home"></i>
-                                <cite>所有商品</cite>
-                            </a>
-                            <dl class="layui-nav-child">
-                                <dd><a href="javascript:;" data_url="../view/test2.html">列表一</a></dd>
-                                <dd><a href="javascript:;" data_url="../view/test.html">列表二</a></dd>
-                                <dd><a href="javascript:;">列表三</a></dd>
-                                <dd><a href="">超链接</a></dd>
-                            </dl>
-                        </li>
-                        <li class="layui-nav-item" layadmin-event="open">
-                            <a href="javascript:;">
-                                <i class="layui-icon layui-icon-component"></i>
-                                <cite>解决方案</cite>
-                            </a>
-                            <dl class="layui-nav-child">
-                                <dd><a href="javascript:;">列表一</a></dd>
-                                <dd><a href="javascript:;">列表二</a></dd>
-                                <dd><a href="">超链接</a></dd>
-                            </dl>
-                        </li>
-                        <li class="layui-nav-item" layadmin-event="open">
-                            <a href="">
-                                <i class="layui-icon layui-icon-template"></i>
-                                <cite>云市场</cite>
-                            </a>
-                        </li>
-                        <li class="layui-nav-item" layadmin-event="open">
-                            <a href="">
-                                <i class="layui-icon layui-icon-app"></i>
-                                <cite>发布商品</cite>
-                            </a>
-                        </li>
+                    <ul class="layui-nav layui-nav-tree"  lay-filter="menu" id="menuMain">
+                        <!--<li class="layui-nav-item layui-nav-itemed" layadmin-event="open">-->
+                            <!--<a class="" href="javascript:;">-->
+                                <!--<i class="layui-icon layui-icon-home"></i>-->
+                                <!--<cite>所有商品</cite>-->
+                            <!--</a>-->
+                            <!--<dl class="layui-nav-child">-->
+                                <!--<dd><a href="javascript:;" data_url="../view/test2.html">列表一</a></dd>-->
+                                <!--<dd><a href="javascript:;" data_url="../view/test.html">列表二</a></dd>-->
+                                <!--<dd><a href="javascript:;">列表三</a></dd>-->
+                                <!--<dd><a href="">超链接</a></dd>-->
+                            <!--</dl>-->
+                        <!--</li>-->
+                        <!--<li class="layui-nav-item" layadmin-event="open">-->
+                            <!--<a href="javascript:;">-->
+                                <!--<i class="layui-icon layui-icon-component"></i>-->
+                                <!--<cite>解决方案</cite>-->
+                            <!--</a>-->
+                            <!--<dl class="layui-nav-child">-->
+                                <!--<dd><a href="javascript:;">列表一</a></dd>-->
+                                <!--<dd><a href="javascript:;">列表二</a></dd>-->
+                                <!--<dd><a href="">超链接</a></dd>-->
+                            <!--</dl>-->
+                        <!--</li>-->
+                        <!--<li class="layui-nav-item" layadmin-event="open">-->
+                            <!--<a href="">-->
+                                <!--<i class="layui-icon layui-icon-template"></i>-->
+                                <!--<cite>云市场</cite>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li class="layui-nav-item" layadmin-event="open">-->
+                            <!--<a href="">-->
+                                <!--<i class="layui-icon layui-icon-app"></i>-->
+                                <!--<cite>发布商品</cite>-->
+                            <!--</a>-->
+                        <!--</li>-->
                     </ul>
                 </div>
             </div>
