增加模块管理

--- a/wg-web/src/main/webapp/common/menu.html
+++ b/wg-web/src/main/webapp/common/menu.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>菜单配置页面</title>
-    <meta name="renderer" content="webkit" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <link type="text/css" rel="stylesheet" href="lib/layui/css/layui.css">
@@ -26,6 +26,9 @@
 <body class="layui-pro-body-bg">
     <div class="layui-pro-page-hd">
         <div class="layui-pro-page-hd-tit">菜单管理</div>
+        <a href="javascript:;" class="layui-pro-page-hd-back" id="menuBack">
+            <i class="dsicon dsicon-left-circle"></i>
+        </a>
         <div class="layui-pro-page-hd-desc">管理平台的菜单信息，包括菜单的新增、修改、删除等</div>
     </div>
     <div class="layui-pro-page-bd">
