--- a/wg-web/src/main/webapp/common/main.html
+++ b/wg-web/src/main/webapp/common/main.html
@@ -54,7 +54,7 @@
                         <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
                     </li>
                     <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect="">
-                        <a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
+                        <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
                     </li>
                 </ul>
             </div>
