--- a/wg-web/src/main/webapp/common/modular_properties.html
+++ b/wg-web/src/main/webapp/common/modular_properties.html
@@ -51,8 +51,8 @@
                     </div>
                     <div class="layui-inline">
                         <a href="javascript:;" class="layui-btn" layer-event="createProperties" name="operation">新增配置</a>
-                        <a href="javascript:;" class="layui-btn" style="background-color: #607D8B;" layer-event="createModular" name="api-operation">标题管理</a>
-                        <a href="javascript:;" class="layui-btn layui-btn-danger" layer-event="delete">删除</a>
+                        <a href="javascript:;" class="layui-btn" style="background-color: #607D8B;" layer-event="labelList" name="operation">标题管理</a>
+                        <a href="javascript:;" class="layui-btn layui-btn-danger" layer-event="delete" name="operation">删除</a>
                     </div>
                 </div>
                 <table class="layui-hide" id="test" lay-filter="testFilter"></table>
@@ -60,9 +60,9 @@
         </div>
     </div>
     <script type="text/html" id="barDemo">
-        <a href="javascript:;" lay-event="editModular" >修改</a>
+        <a href="javascript:;" lay-event="ediProperties">修改</a>
         <span class="layui-pro-divider layui-pro-divider-vertical"></span>
-        <a href="javascript:;" name="api-operation" lay-event="deleteModular">删除</a>
+        <a href="javascript:;" lay-event="deleteProperties">删除</a>
     </script>
 </body>
 </html>
