--- a/wg-web/src/main/webapp/common/properties_label.html
+++ b/wg-web/src/main/webapp/common/properties_label.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <script type="text/html" id="barDemo">
-        <a href="javascript:;" lay-event="deleteProperties">删除</a>
+        <a href="javascript:;" lay-event="deleteLabel">删除</a>
     </script>
 </body>
 </html>
