增加多删除方法

--- a/wg-web/src/main/webapp/common/modular_properties.html
+++ b/wg-web/src/main/webapp/common/modular_properties.html
@@ -52,7 +52,7 @@
                     <div class="layui-inline">
                         <a href="javascript:;" class="layui-btn" layer-event="createProperties" name="operation">新增配置</a>
                         <a href="javascript:;" class="layui-btn" style="background-color: #607D8B;" layer-event="labelList" name="operation">标题管理</a>
-                        <a href="javascript:;" class="layui-btn layui-btn-danger" layer-event="delete" name="operation">删除</a>
+                        <a href="javascript:;" class="layui-btn layui-btn-danger" layer-event="deletes" name="operation">删除</a>
                     </div>
                 </div>
                 <table class="layui-hide" id="test" lay-filter="testFilter"></table>
