--- a/wg-web/src/main/webapp/common/main.html
+++ b/wg-web/src/main/webapp/common/main.html
@@ -105,7 +105,7 @@
 
             <div class="layui-body" id="LAY_app_body">
                 <div class="layadmin-tabsbody-item layui-show">
-                    <iframe src="../view/test.html" frameborder="0" class="layadmin-iframe"></iframe>
+                    <iframe src="../common/modular.html" frameborder="0" class="layadmin-iframe"></iframe>
                 </div>
             </div>
             <!-- 辅助元素，一般用于移动设备下遮罩 -->
